--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8081 # 指定端口号
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/InferaFlow?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/InferaFlow?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -53,11 +53,11 @@ spring:
 
 
 minio:
-    endpoint: http://localhost:9000
-    accessKey: minioadmin
-    secretKey: minioadmin
-    bucketName: uploads
-    publicUrl: http://localhost:9000
+  endpoint: http://localhost:19000
+  accessKey: admin
+  secretKey: InferaFlow2025
+  bucketName: uploads
+  publicUrl: http://localhost:19000
 jwt:
   secret-key: "PXrQbuCwXwOZzkML/Vm2S5rSwt1iybvmKtGDzVEu+Hc="
 
@@ -71,11 +71,15 @@ admin:
 file:
   parsing:
     chunk-size: 512 # 每个文本块的最大字符数
+    buffer-size: 8192    # 8KB 缓冲区
+    max-memory-threshold: 0.8  # 80% 内存阈值
 
 elasticsearch:
   host: localhost       # Elasticsearch主机地址
   port: 9200            # Elasticsearch端口号
   scheme: http          # 协议（http/https）
+  username: elastic
+  password: InferaFlow2025
 
 logging:
   level:
@@ -94,13 +98,20 @@ log4j:
 deepseek:
   api:
     url: https://api.deepseek.com/v1
-    key:
+    model: deepseek-chat
+    key: ${DEEPSEEK_API_KEY:}
+    connect-timeout-ms: 30000
+    response-timeout-ms: 120000
+    proxy:
+      enabled: false
+      host: 127.0.0.1
+      port: 7890
     # DeepSeek API Key
 
 embedding:
   api:
     url: https://dashscope.aliyuncs.com/compatible-mode/v1
-    key:    # 填入通义千问API key
+    key: sk-499b7564778e46e58501a7dd05dcfef9   # 填入通义千问API key
     model: text-embedding-v4
     batch-size: 10  # 单次请求最大行数（DashScope限制为10）
     dimension: 2048  # 指定向量维度
