--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -45,6 +45,10 @@ spring:
     topic:
       file-processing: file-processing-topic1 # 新增的 Topic 配置
       dlt: file-processing-dlt # 死信队列主题
+  elasticsearch:
+    uris: http://localhost:9200
+    username: elastic
+    password: InferaFlow2025
   webflux:
     client:
       max-in-memory-size: 16MB  # 增加响应大小限制
