--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8081 # 指定端口号
 spring:
+  output:
+    ansi:
+      enabled: ALWAYS
   datasource:
     url: jdbc:mysql://localhost:3306/InferaFlow?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
@@ -10,9 +13,6 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
   data:
     redis:
       host: localhost
